test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/extra_credit/static_label.plx
# The static specifier cannot be applied to labels

pub fn main(none) i32 {
    data label a
    return 1
}
